dev_appcolor/blue/appcolor-dev-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: appcolor
    versao: blue
    app.kubernetes.io/part-of: appcolor-dev-blue
  name: appcolor-dev-deploy-blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appcolor
      versao: blue
  template:
    metadata:
      labels:
        app: appcolor
        versao: blue
    spec:
      containers:
        - image: default-route-openshift-image-registry.apps.ocplab.vtal.intra/appcolor/appcolor:blue
          name: appcolor
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            limits:
              cpu: 500m
              memory: 1000Mi
            requests:
              cpu: 200m
              memory: 200Mi
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 15
