dev_appcolor/blue/appcolor-dev-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: appcolor
    versao: blue
  name: appcolor-dev-route-blue
spec:
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: appcolor-dev-svc-blue
    weight: 100
  port:
    targetPort: appcolor-dev-svc-port-blue
  wildcardPolicy: None
